# wiremind

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yaml  docker-compose.yaml  go.mod  go.sum  oapi-codegen.yaml
cmd/forensics/: main.go
config/: config.go  config.yaml
deploy/: promtail.yml
docs/: API_PLAN.md  ARCHITECTURE.md  COMMIT_HISTORY.md  NICE_TO_HAVE.md  PHASE1.md  PHASE2.md  PHASE3.md  PHASE8.md  PHASE9.md  PLANNING.md  RUNBOOK.md  UI_INTEGRATION_TESTING.md  UI_PLAN_WS.md  embed.go  openapi.yaml
internal/api/: server.go  server_test.go
internal/enrichment/: beacon.go  beacon_test.go  entropy.go  entropy_test.go  geoip.go  geoip_test.go  ioc.go  ioc_test.go  pipeline.go  pipeline_test.go  threatintel.go  threatintel_test.go
internal/input/: live.go  live_test.go  pcap_file.go  pcapng.go  pcapng_test.go  pipe.go  pipe_test.go  source.go
internal/models/: config.go  enriched.go  enriched_test.go  entity.go  events.go  flow.go  ip.go  job.go  packet.go
internal/output/: writer.go
internal/parser/: dns.go  dns_test.go  flow.go  (+11 more)
python/: .dockerignore  Dockerfile  pyproject.toml
python/src/wiremind/: client.py  logger.py  main.py  state.py
python/src/wiremind/agents/: correlation.py  orchestrator.py  reporting.py  specialists.py
python/src/wiremind/knowledge/: consultant.py  ingestor.py  vectorstore.py
python/src/wiremind/tools/: base.py  core.py
python/tests/: test_client.py  test_correlation.py  test_e2e.py  test_orchestrator.py  test_rag.py  test_reporting.py  test_specialists.py
scripts/: prometheus.yml
(+3 files in other folders)
