[tool.poetry]
name = "wiremind-python"
version = "0.1.0"
description = "AI Agent infrastructure for Wiremind forensics engine"
authors = ["Junie <junie@jetbrains.com>"]
packages = [{include = "wiremind", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"
langgraph = "^0.0.30"
pydantic = "^2.0.0"
structlog = "^24.1.0"
httpx = "^0.27.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
respx = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
